syntax = "proto3";

option csharp_namespace = "WalkingATM.Publisher";

package stock;

service StockPriceService {
  rpc StockPricesHealthCheck (Empty) returns (StockPriceList) {}
  rpc PushStockPrices (StockPriceList) returns (Res) {}
}

message StockPrice {
  string strategy = 1;
  string date = 2;
  string time = 3;
  string symbol = 4;
  string symbolName = 5;
  string price = 6;
}

message StockPriceList {
  repeated StockPrice stockPrices = 1;
}

message Empty {}

message Res {
  string code = 1;
  string message = 2;
  string payload = 3;
}